cabal-version: 2.4
name:          tasty-json-markdown
version:       0.1.0.0
maintainer:    connorbaker01@gmail.com
author:        Connor Baker

executable tasty-json-markdown
    main-is:          Main.hs
    hs-source-dirs:   .
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        aeson,
        bytestring,
        tasty-json-reporter
